--- a/.github/workflows/Android.yml
+++ b/.github/workflows/Android.yml
@@ -12,12 +12,13 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Setup Haxe and OpenFL
-      uses: skial/setup-haxe@v1
-      with:
-        haxe-version: 4.2.5
-        haxelib-version: latest
-        openfl-version: latest
+    - name: Install Haxe
+      run: |
+        sudo apt-get update
+        sudo apt-get install haxe -y
+
+    - name: Install Haxelib
+      run: haxelib setup ~/haxelib
 
     - name: Install Dependencies
       run: |
